syntax = "proto3";

package org.spikeboot.grpc;

import "google/protobuf/empty.proto";

message Book{
  string id = 1;
  string book_name = 2;
  string author = 3;
}

message SucceedResponse{
  bool succeeded = 1;
  string error = 2;
}

message GetBooksByNameRequest{
  string book_name = 1;
}


service BookMongoService{
  rpc addNewBook(Book) returns (SucceedResponse);
  rpc existsBook(Book) returns (SucceedResponse);
  rpc findAllBook(google.protobuf.Empty) returns (stream Book);
  rpc saveAllBooks(stream Book) returns (SucceedResponse);
  rpc getBooksByName(stream GetBooksByNameRequest) returns (stream Book);
}